Fixed grid size and alignment

--- a/sass/_content.scss
+++ b/sass/_content.scss
@@ -4,6 +4,7 @@
 
 .posts-grid {
     grid-gap: $sp-4;
+    justify-items: center;
     @media screen and (min-width: $md){
         grid-template-columns: repeat( auto-fill, minmax( 400px, 1fr ) );
     }
