--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -20,6 +20,6 @@
 .widget-area-wrapper.grid {
     grid-gap: $sp-4;
     @media screen and (min-width: $md){
-        grid-template-columns: repeat( auto-fill, minmax( 385px, 1fr ) );
+        grid-template-columns: repeat( auto-fill, minmax( 400px, 1fr ) );
     }
 }
